DuPont DevSB/src/objects/ccrz__E_Seller__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce Account this Seller is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Sellers</relationshipLabel>
        <relationshipName>CC_Sellers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DefaultRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When set, any orders that are split orders as applied to a specific seller will be set such that the owner of the split order will be this user.</description>
        <label>Default Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SellerReps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <description>The effective end date/time at which point this Seller is no longer active.</description>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <description>The effective start date/time at which this Seller becomes active.</description>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag determining whether or not this Seller is active.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Location__c</fullName>
        <description>Latitude and Longitude of this Seller. This is used for determining the distance from a user searching for Sellers near them.</description>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ccrz__Logo__c</fullName>
        <description>URL to the Seller logo for displaying on the Seller Detail page as well as in Seller listings.</description>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>HTML content that displays on the Seller Detail page.</description>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__SearchTokens__c</fullName>
        <defaultValue>&quot;all&quot;</defaultValue>
        <description>Searchable text in addition to the other text fields on the Seller object. This can be used to tweak the search results. The text &quot;all&quot; should always be included in this field to allow searches for nearby Sellers without specifying any search key words (e.g. leaving the name field blank when searching for nearby sellers).</description>
        <label>Search Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__SellerId__c</fullName>
        <description>External ID for integrations.</description>
        <externalId>true</externalId>
        <label>Seller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>HTML short description that displays on the Seller List page.</description>
        <label>Short Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Seller&apos;s CloudCraze Storefront Name if they have one.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__WebsiteURL__c</fullName>
        <description>Sellers external website URL.</description>
        <label>WebsiteURL</label>
        <type>Url</type>
    </fields>
    <label>CC Seller</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ccrz__Location__Latitude__s</columns>
        <columns>ccrz__Location__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Seller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Sellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>